--- a/progect/src/App.css
+++ b/progect/src/App.css
@@ -56,3 +56,9 @@
   z-index: 1;
 }
 /*-------------------------------------------------------------------------------------------*/
+/*------------------------------------------- Header -------------------------------------------*/
+
+/*-------------------------------------------------------------------------------------------*/
+/*------------------------------------------- Contact Form -------------------------------------------*/
+
+/*-------------------------------------------------------------------------------------------*/
